# erp_cakra

./: .env.prod.example  .gitattributes  .gitignore  Caddyfile  compose.prod.yaml  cookies.tmp  ensure-apps.sh  nginx-inject.sh  prod-update-assets.sh  update-erp-cakra.sh  update-oakglobal-stack.sh
agents/: .gitignore  README.md  pyproject.toml
agents/agents/: hooks.py  install.py
agents/agents/agent/: api.py  center.py  files.py  fleet.py  history.py  llm.py  logger.py  tools.py
agents/agents/agent/skill/: bl_to_shipping_list.skill  chat_extraction.skill  document_extraction.skill  expedition.skill
agents/agents/assistant/doctype/agent_administrator/: agent_administrator.js  agent_administrator.json
agents/agents/assistant/doctype/agent_event/: agent_event.js  test_agent_event.py
agents/agents/assistant/doctype/agent_flow_step/: agent_flow_step.json
agents/agents/assistant/doctype/agent_history/: agent_history.py
agents/agents/public/js/: assistant_tabs.js
agents/agents/workspace_sidebar/: assistant.json
erp/: .gitignore  README.md  pyproject.toml
erp/erp/: hooks.py  install.py  modules.txt  patches.txt
erp/erp/expedition/: financials.py  get_items.py  numbering.py
erp/erp/fixtures/: cargo.json  container_size.json  expense_note_type.json  jenis_karantina.json  packing_list_type.json  shipment_type.json
erp/erp/patches/: add_fico_module.py  fix_chart_of_accounts_ascend.py
erp/erp/public/css/: list_id_fit.css
erp/erp/public/js/: pending_cash_actions.js  sales_invoice.js
erp/erp/workspace_sidebar/: expedition.json  master.json
(+962 files in other folders)
