[project]
name = "agents"
authors = [
    { name = "CMI", email = "you@cmi.com" },
]
description = "Agent Fleet / Assistant (extracted from erp_cmi)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "pypdfium2",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
